commons-io is no longer needed